--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"svelte_build": "svelte-kit build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -17,6 +18,7 @@
 		"postcss": "^8.4.45",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.2",
 		"tailwindcss": "^3.4.11",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
